--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 Django
 python-decouple
 Pillow
+django-allauth
+google_oauth2_tool
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
